--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -22,17 +22,10 @@
             </div>
         </div>
         <div class="alert alert-danger alert_hidden"></div>
-        <!-- Slider main container -->
         <div class="swiper-container">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-            </div>
-            <!-- If we need pagination -->
+            <div class="swiper-wrapper"></div>
             <div class="swiper-pagination"></div>
         </div>
-
-        <!-- If we need navigation buttons -->
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
     </main>
