refactor: clean up code

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -26,8 +26,8 @@
             <div class="swiper-wrapper"></div>
             <div class="swiper-pagination"></div>
         </div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev arrow arrow_hidden"></div>
+        <div class="swiper-button-next arrow arrow_hidden"></div>
     </main>
     <footer class="footer">
         <span>RS School 2020q1</span>
